# Home_Work

./: .flake8  README.md  coverage_report.txt  main.py  pyproject.toml
src/: __init__.py  categories.py  exceptions.py  order.py  products.py  utils.py
tests/: __init__.py  test_categories.py  test_json_loader.py  test_main.py  test_order.py  test_products.py  test_utils.py
